[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/characters/enemy/Spider.gd" type="Script" id=1]
[ext_resource path="res://arts/characters/Spider.png" type="Texture" id=2]
[ext_resource path="res://systems/DamageComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://arts/light.png" type="Texture" id=4]
[ext_resource path="res://systems/CooldownComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/AudioRandomizer.gd" type="Script" id=6]
[ext_resource path="res://sounds/enemy.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.924, 1.062 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.25 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.472, 0.908 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 46.0435

[node name="Spider" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 29
script = ExtResource( 1 )

[node name="Enemy" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true

[node name="Position2D" type="Position2D" parent="Enemy"]
position = Vector2( 40, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Enemy"]
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 21

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
anims/shoot = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="DamageComponent" parent="." instance=ExtResource( 3 )]
autoheal = true
drop_types = [ "nano", "weed", "turret", "light" ]
drop_amount = 4

[node name="CooldownComponent" parent="." instance=ExtResource( 5 )]
speed = 30

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
energy = 0.7
mode = 2
shadow_enabled = true

[node name="Position2D" type="Position2D" parent="."]

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Sounds"
script = ExtResource( 6 )
pitch_low = 0.796
ptch_high = 1.133
volume_low = -15
volume_high = -5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
